Close report's tab when deleting it from TOC

BUG:378379
FIXED-IN:5.0